--- a/index.html
+++ b/index.html
@@ -33,6 +33,98 @@
   <p>Before we sign a contract or even write a line of code our team will spend the necessary time needed to understand your product vision.The outcome of this scoping session is a proposals or high-level statement of work.Based on your requirements, we can provide a complete offering or just the pieces you need.~</p>
 
 </section>
+<!-- what we do  -->
+<section id="what-we-do">
+  <h1>What we do</h1>
+  <div class="d-flex justify-content-around row-hl">
+    <div class="p-4 item-hl">
+      <img src="/img/services_icons/design_icon.png">
+      <h2>Design</h2>
+      <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
+      <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+    </div>
+    <div class="p-4 item-hl">
+      <img src="/img/services_icons/dev_icon.png">
+      <h2>Development</h2>
+      <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
+      <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+    </div>
+    <div class="p-4 item-hl">
+      <img src="/img/services_icons/product_icon.png">
+      <h2>Product Management</h2>
+      <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.This iterative process allows for changes as business requirements evolve.</p>
+      <p></p>
+    </div>
+  </div>
+
+</section>
+<!-- portfolio  -->
+<section id="porfolio">
+  <div class="container">
+    <h1 class="text-center">Portfolio</h1>
+    <div class="row mb-4">
+      <div class="col-md-3">
+        <a href="https://source.unsplash.com/random/560x560" data-toggle="lightbox" data-gallery="img-gallery" data-height="560" data-width="560">
+          <img src="/img/portfolio/work1.jpg" alt="" class="img-fluid">
+        </a>
+      </div>
+
+      <div class="col-md-3">
+        <a href="https://source.unsplash.com/random/561x561" data-toggle="lightbox" data-gallery="img-gallery" data-height="561" data-width="561">
+          <img src="/img/portfolio/work2.jpg" alt="" class="img-fluid">
+        </a>
+      </div>
+
+      <div class="col-md-3">
+        <a href="https://source.unsplash.com/random/562x562" data-toggle="lightbox" data-gallery="img-gallery" data-height="562" data-width="562">
+          <img src="/img/portfolio/work3.jpg" alt="" class="img-fluid">
+        </a>
+      </div>
+
+      <div class="col-md-3">
+        <a href="https://source.unsplash.com/random/562x562" data-toggle="lightbox" data-gallery="img-gallery" data-height="562" data-width="562">
+          <img src="/img/portfolio/work4.jpg" alt="" class="img-fluid">
+        </a>
+      </div>
+    </div>
+<!-- lower row -->
+    <div class="row mb-4">
+      <div class="col-md-3">
+        <a href="https://source.unsplash.com/random/563x563" data-toggle="lightbox" data-gallery="img-gallery" data-height="563" data-width="563">
+          <img src="/img/portfolio/work5.jpg" alt="" class="img-fluid">
+        </a>
+      </div>
+
+      <div class="col-md-3">
+        <a href="https://source.unsplash.com/random/564x564" data-toggle="lightbox" data-gallery="img-gallery" data-height="564" data-width="564">
+          <img src="/img/portfolio/work6.jpg" alt="" class="img-fluid">
+        </a>
+      </div>
+
+      <div class="col-md-3">
+        <a href="https://source.unsplash.com/random/565x565" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="565">
+          <img src="/img/portfolio/work7.jpg" alt="" class="img-fluid">
+        </a>
+      </div>
+
+      <div class="col-md-3">
+        <a href="https://source.unsplash.com/random/565x565" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="565">
+          <img src="/img/portfolio/work8.jpg" alt="" class="img-fluid">
+        </a>
+      </div>
+    </div>
+  </div>
+
+</section>
+<!-- contact us -->
+<section id="contact-us">
+
+
+
+  
+</section>
+
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
