completed upto footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- START HERE -->
 <header id="showcase">
   <img src="/img/logo/logo.png" >
-  <h1>Welcome To Delani Studios</h1>
+  <h1>Welcome <br> To Delani Studios</h1>
   <p>Amazing people are making amazing designs in a fun environment</p>
   <a href="#" class="button"><img src="/img/mouse_click.png" ></a>
 
@@ -24,7 +24,7 @@
 <!-- about us -->
 <section id="about">
   <h1>About Us</h1>
-  <p>When you work with us you are part of a team of committed collaborators. All aspects of our software development process are integrated,interactive and agile.Our approach unifies design, development and product management to create exceptional products.We start each project by understanding your business goals,the user's needs and the product requirements.Then we help translate them into effective elegant solutions.</p>
+  <p>When you work with us you are part of a team of committed collaborators. All aspects of our software development process are integrated,interactive and agile. <br> <br> Our approach unifies design, development and product management to create exceptional products.We start each project by understanding your business goals,the user's needs and the product requirements.Then we help translate them into effective elegant solutions.</p>
 
 </section>
 <!-- services -->
@@ -35,19 +35,18 @@
 </section>
 <!-- what we do  -->
 <section id="what-we-do">
+  <div class="container">
   <h1>What we do</h1>
   <div class="d-flex justify-content-around row-hl">
     <div class="p-4 item-hl">
       <img src="/img/services_icons/design_icon.png">
       <h2>Design</h2>
-      <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
-      <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+      <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing. <br> Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
     </div>
     <div class="p-4 item-hl">
       <img src="/img/services_icons/dev_icon.png">
       <h2>Development</h2>
-      <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
-      <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+      <p>All engineers are fluent in the latest enterprise, mobile and web development technologies. <br> They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
     </div>
     <div class="p-4 item-hl">
       <img src="/img/services_icons/product_icon.png">
@@ -56,32 +55,32 @@
       <p></p>
     </div>
   </div>
-
+</div>
 </section>
 <!-- portfolio  -->
 <section id="porfolio">
   <div class="container">
     <h1 class="text-center">Portfolio</h1>
     <div class="row mb-4">
-      <div class="col-md-3">
+      <div class="col-md-3 order-4">
         <a href="https://source.unsplash.com/random/560x560" data-toggle="lightbox" data-gallery="img-gallery" data-height="560" data-width="560">
           <img src="/img/portfolio/work1.jpg" alt="" class="img-fluid">
         </a>
       </div>
 
-      <div class="col-md-3">
+      <div class="col-md-3 order-3">
         <a href="https://source.unsplash.com/random/561x561" data-toggle="lightbox" data-gallery="img-gallery" data-height="561" data-width="561">
           <img src="/img/portfolio/work2.jpg" alt="" class="img-fluid">
         </a>
       </div>
 
-      <div class="col-md-3">
+      <div class="col-md-3 order-2">
         <a href="https://source.unsplash.com/random/562x562" data-toggle="lightbox" data-gallery="img-gallery" data-height="562" data-width="562">
           <img src="/img/portfolio/work3.jpg" alt="" class="img-fluid">
         </a>
       </div>
 
-      <div class="col-md-3">
+      <div class="col-md-3 order-1">
         <a href="https://source.unsplash.com/random/562x562" data-toggle="lightbox" data-gallery="img-gallery" data-height="562" data-width="562">
           <img src="/img/portfolio/work4.jpg" alt="" class="img-fluid">
         </a>
@@ -118,12 +117,61 @@
 </section>
 <!-- contact us -->
 <section id="contact-us">
+<div class="container">
+  <h1>Contact Us</h1>
 
+  <form>
+  <div class="row mb-4">
+    <div class="col-md-6">
+    <p>Name...</p>
+      </div>
 
+      <div class="col-md-6">
+        <p>Email...</p>
+      </div>
+    </div>
 
+    <div class="row mb-4">
+      <div class="col-md-12">
+       <p style="padding-bottom: 6rem;">Your Message Here</p>
+      </div>
+    </div>
+  </form>
+
+</div>
   
 </section>
+<!-- footer -->
+<footer id="footer">
 
+  <div class="container">
+    <div class="row mb-4">
+      <div class="col-md-12">
+        <img src="/img/social_icons/twitter.png" >
+        <img src="/img/social_icons/stumble_upon.png" >
+        <img src="/img/social_icons/g_plus.png" >
+        <img src="/img/social_icons/facebook.png" >
+        <img src="/img/social_icons/skype.png" >
+        <img src="/img/social_icons/you_tube.png" >
+        <img src="/img/social_icons/behance.png" >
+        <img src="/img/social_icons/pinterest.png" >
+        <img src="/img/social_icons/dribble.png" >
+        <img src="/img/social_icons/flickr.png" >
+
+      </div>
+
+    </div>
+    <div class="row mb-4">
+      <div class="col-md-12">
+        <p>DELANI STUDIOS.</p>
+        <p style="margin-top:-20px;">2015</p>
+      </div>
+
+    </div>
+
+  </div>
+
+</footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
