--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
   <!-- START HERE -->
 <header id="showcase">
-  <img src="/img/logo/logo.png" >
+  <img src="./img/logo/logo.png" >
   <h1>Welcome <br> To Delani Studios</h1>
   <p>Amazing people are making amazing designs in a fun environment</p>
-  <a href="#" class="button"><img src="/img/mouse_click.png" ></a>
+  <a href="#" class="button"><img src="./img/mouse_click.png" ></a>
 
 </header>
 <!-- about us -->
@@ -39,17 +39,17 @@
   <h1>What we do</h1>
   <div class="d-flex justify-content-around row-hl">
     <div class="p-4 item-hl">
-      <img src="/img/services_icons/design_icon.png">
+      <img src="./img/services_icons/design_icon.png">
       <h2>Design</h2>
       <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing. <br> Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
     </div>
     <div class="p-4 item-hl">
-      <img src="/img/services_icons/dev_icon.png">
+      <img src="./img/services_icons/dev_icon.png">
       <h2>Development</h2>
       <p>All engineers are fluent in the latest enterprise, mobile and web development technologies. <br> They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
     </div>
     <div class="p-4 item-hl">
-      <img src="/img/services_icons/product_icon.png">
+      <img src="./img/services_icons/product_icon.png">
       <h2>Product Management</h2>
       <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.This iterative process allows for changes as business requirements evolve.</p>
       <p></p>
@@ -64,25 +64,25 @@
     <div class="row mb-4">
       <div class="col-md-3 order-4">
         <a href="https://source.unsplash.com/random/560x560" data-toggle="lightbox" data-gallery="img-gallery" data-height="560" data-width="560">
-          <img src="/img/portfolio/work1.jpg" alt="" class="img-fluid">
+          <img src="./img/portfolio/work1.jpg" alt="" class="img-fluid">
         </a>
       </div>
 
       <div class="col-md-3 order-3">
         <a href="https://source.unsplash.com/random/561x561" data-toggle="lightbox" data-gallery="img-gallery" data-height="561" data-width="561">
-          <img src="/img/portfolio/work2.jpg" alt="" class="img-fluid">
+          <img src="./img/portfolio/work2.jpg" alt="" class="img-fluid">
         </a>
       </div>
 
       <div class="col-md-3 order-2">
         <a href="https://source.unsplash.com/random/562x562" data-toggle="lightbox" data-gallery="img-gallery" data-height="562" data-width="562">
-          <img src="/img/portfolio/work3.jpg" alt="" class="img-fluid">
+          <img src="./img/portfolio/work3.jpg" alt="" class="img-fluid">
         </a>
       </div>
 
       <div class="col-md-3 order-1">
         <a href="https://source.unsplash.com/random/562x562" data-toggle="lightbox" data-gallery="img-gallery" data-height="562" data-width="562">
-          <img src="/img/portfolio/work4.jpg" alt="" class="img-fluid">
+          <img src="./img/portfolio/work4.jpg" alt="" class="img-fluid">
         </a>
       </div>
     </div>
@@ -90,25 +90,25 @@
     <div class="row mb-4">
       <div class="col-md-3">
         <a href="https://source.unsplash.com/random/563x563" data-toggle="lightbox" data-gallery="img-gallery" data-height="563" data-width="563">
-          <img src="/img/portfolio/work5.jpg" alt="" class="img-fluid">
+          <img src="./img/portfolio/work5.jpg" alt="" class="img-fluid">
         </a>
       </div>
 
       <div class="col-md-3">
         <a href="https://source.unsplash.com/random/564x564" data-toggle="lightbox" data-gallery="img-gallery" data-height="564" data-width="564">
-          <img src="/img/portfolio/work6.jpg" alt="" class="img-fluid">
+          <img src="./img/portfolio/work6.jpg" alt="" class="img-fluid">
         </a>
       </div>
 
       <div class="col-md-3">
         <a href="https://source.unsplash.com/random/565x565" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="565">
-          <img src="/img/portfolio/work7.jpg" alt="" class="img-fluid">
+          <img src="./img/portfolio/work7.jpg" alt="" class="img-fluid">
         </a>
       </div>
 
       <div class="col-md-3">
         <a href="https://source.unsplash.com/random/565x565" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="565">
-          <img src="/img/portfolio/work8.jpg" alt="" class="img-fluid">
+          <img src="./img/portfolio/work8.jpg" alt="" class="img-fluid">
         </a>
       </div>
     </div>
@@ -147,16 +147,16 @@
   <div class="container">
     <div class="row mb-4">
       <div class="col-md-12">
-        <img src="/img/social_icons/twitter.png" >
-        <img src="/img/social_icons/stumble_upon.png" >
-        <img src="/img/social_icons/g_plus.png" >
-        <img src="/img/social_icons/facebook.png" >
-        <img src="/img/social_icons/skype.png" >
-        <img src="/img/social_icons/you_tube.png" >
-        <img src="/img/social_icons/behance.png" >
-        <img src="/img/social_icons/pinterest.png" >
-        <img src="/img/social_icons/dribble.png" >
-        <img src="/img/social_icons/flickr.png" >
+        <img src="./img/social_icons/twitter.png" >
+        <img src="./img/social_icons/stumble_upon.png" >
+        <img src="./img/social_icons/g_plus.png" >
+        <img src="./img/social_icons/facebook.png" >
+        <img src="./img/social_icons/skype.png" >
+        <img src="./img/social_icons/you_tube.png" >
+        <img src="./img/social_icons/behance.png" >
+        <img src="./img/social_icons/pinterest.png" >
+        <img src="./img/social_icons/dribble.png" >
+        <img src="./img/social_icons/flickr.png" >
 
       </div>
 
